--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/cd8dd3426c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css" />
     <title>Restyle - Articles de Seconde Main</title>
     <title>Document</title>
   </head>
@@ -49,9 +50,12 @@
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" >
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand logo" href="#">
+            <img src="img/logo.png" alt="Bootstrap" width="70" height="auto" />
+          </a>
+
           <button
             class="navbar-toggler"
             type="button"
@@ -64,12 +68,12 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Accueil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Annonces</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -79,19 +83,16 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Dropdown
+                  Catalogue des articles
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
+                  <li><a class="dropdown-item" href="#">Chaussures</a></li>
+                  <li><a class="dropdown-item" href="#">Robes</a></li>
+                  <li><a class="dropdown-item" href="#">Pantalons</a></li>
+                  <li><a class="dropdown-item" href="#">T-shirt</a></li>
+                  <li><a class="dropdown-item" href="#">Chaussures</a></li>
+                  <li><a class="dropdown-item" href="#">Robes</a></li>
                 </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -101,8 +102,14 @@
                 placeholder="Search"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-success" type="submit">
-                Search
+              <button class="btn btn-link" type="submit">
+                <i class="fa-solid fa-star" style="color: #000000;font-size: 20px;"></i>
+              </button>
+              <button class="btn btn-link" type="submit">
+                <i class="fa-solid fa-user" style="color: #000000; font-size: 20px;"></i>
+              </button>
+              <button class=" btn btn-link" type="submit">
+                <i class="fa-solid fa-cart-shopping" style="color: #000000;font-size: 20px;"></i>
               </button>
             </form>
           </div>
@@ -112,6 +119,35 @@
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
+    <!------------------------------------------------------------------ Hero section -------------------------------------------------------->
+<main>
+    <section class="hero-section">
+        <div class="parallax">
+          <div class="hero">
+            <div class="text">
+              <h1>ReStyle</h1>
+              <p> Bienvenue sur notre site Restyle</p>
+              <button type="button" class="btn btn-outline-dark herobtn">Isncrivez vous</button>
+              
+        </div>
+      </section>
+      <section>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis temporibus, ullam expedita repellendus asperiores itaque ab pariatur consequatur autem aliquam ipsam minima quia labore aspernatur quod eum recusandae. Aliquam, natus.
+            Qui alias earum placeat quod et officiis illo consequatur voluptates eveniet natus neque minus modi nulla laboriosam possimus doloremque quidem fugit asperiores perspiciatis, quasi reiciendis nihil! Dolore, labore! Reiciendis, quod.
+            Laudantium voluptates sequi laborum corrupti blanditiis, sapiente tenetur nostrum iure ea expedita rem alias quam molestias pariatur repudiandae quas natus delectus culpa nisi dolor fugiat illo commodi. Vitae, velit obcaecati?
+            Sunt minus omnis deleniti tempore perspiciatis nulla repellat illum perferendis, adipisci voluptate enim nostrum veritatis quae numquam ab reprehenderit tempora eum magni obcaecati veniam natus dignissimos accusamus asperiores vero? Illo.
+            Sunt voluptas esse debitis libero repellat dicta tempore nemo nesciunt pariatur veniam, quas harum beatae illum fugit consequuntur, asperiores vitae perspiciatis quis ad facere incidunt! Officiis beatae ipsa sequi placeat.</p>
+        </div>
+      </section>
+</main>
+
+    <!------------------------------------------------------------------ Hero section -------------------------------------------------------->
+    <!------------------------------------------------------------------ Hero section -------------------------------------------------------->
+
+    <!------------------------------------------------------------------ JAVA -------------------------------------------------------->
+    <!------------------------------------------------------------------ JAVA -------------------------------------------------------->
+    <!------------------------------------------------------------------ JAVA -------------------------------------------------------->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
