--- a/index.html
+++ b/index.html
@@ -103,18 +103,18 @@
                 aria-label="Search"
               />
               <button class="btn btn-link" type="submit">
-                <i class="fa-solid fa-star" style="color: #000000;font-size: 20px;"></i>
+                <i class="fa-solid fa-star icnsmenu" ></i>
               </button>
               <button class="btn btn-link" type="submit">
-                <i class="fa-solid fa-user" style="color: #000000; font-size: 20px;"></i>
+                <i class="fa-solid fa-user icnsmenu" ></i>
               </button>
               <button class=" btn btn-link" type="submit">
-                <i class="fa-solid fa-cart-shopping" style="color: #000000;font-size: 20px;"></i>
+                <i class="fa-solid fa-cart-shopping icnsmenu" ></i>
               </button>
             </form>
           </div>
         </div>
-      </nav>
+    </nav>
     </header>
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
@@ -126,19 +126,48 @@
           <div class="hero">
             <div class="text">
               <h1>ReStyle</h1>
-              <p> Bienvenue sur notre site Restyle</p>
-              <button type="button" class="btn btn-outline-dark herobtn">Isncrivez vous</button>
+              <p> Réinventez votre style avec des articles de mode uniques et durables</p>
+              <a href="#shop" class="btn btn-primary btn-lg rounded-pill shadow-lg glow-on-hover btnhero">
+                Explorer la collection
+              </a>
               
         </div>
       </section>
       <section>
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis temporibus, ullam expedita repellendus asperiores itaque ab pariatur consequatur autem aliquam ipsam minima quia labore aspernatur quod eum recusandae. Aliquam, natus.
-            Qui alias earum placeat quod et officiis illo consequatur voluptates eveniet natus neque minus modi nulla laboriosam possimus doloremque quidem fugit asperiores perspiciatis, quasi reiciendis nihil! Dolore, labore! Reiciendis, quod.
-            Laudantium voluptates sequi laborum corrupti blanditiis, sapiente tenetur nostrum iure ea expedita rem alias quam molestias pariatur repudiandae quas natus delectus culpa nisi dolor fugiat illo commodi. Vitae, velit obcaecati?
-            Sunt minus omnis deleniti tempore perspiciatis nulla repellat illum perferendis, adipisci voluptate enim nostrum veritatis quae numquam ab reprehenderit tempora eum magni obcaecati veniam natus dignissimos accusamus asperiores vero? Illo.
-            Sunt voluptas esse debitis libero repellat dicta tempore nemo nesciunt pariatur veniam, quas harum beatae illum fugit consequuntur, asperiores vitae perspiciatis quis ad facere incidunt! Officiis beatae ipsa sequi placeat.</p>
-        </div>
+        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/vetements.jpg" class="d-block w-100" alt="Promo 1">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Nouvelle Collection</h5>
+                  <p>Découvrez nos articles uniques et durables.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/vetements.jpg" class="d-block w-100" alt="Promo 2">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Offre spéciale</h5>
+                  <p>Jusqu'à -50% sur notre sélection hiver !</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/vetements.jpg" class="d-block w-100" alt="Promo 3">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Livraison offerte</h5>
+                  <p>Pour toute commande de plus de 50€.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          
       </section>
 </main>
 
