--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       content="https://www.restyle.com/images/twitter-preview.jpg"
     />
     <!---------------------------------------------------------- LIENSSSSSSSSSSSSSSS --------------------------------------------------------->
+    <link rel="icon" type="image/png" href="img/logo.png" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
