--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             >
               <li style="text-align: center">
                 <a
-                  href="https://www.facebook.com/groups/448485336360350"
+                  href="https://www.facebook.com"
                   target="_blank"
                   style="text-align: center"
                 >
