--- a/html/chaus.html
+++ b/html/chaus.html
@@ -34,7 +34,7 @@
       content="https://www.restyle.com/images/twitter-preview.jpg"
     />
     <!---------------------------------------------------------- LIENSSSSSSSSSSSSSSS --------------------------------------------------------->
-    <link rel="icon" type="image/png" href="img/logo.png" />
+    <link rel="icon" type="image/png" href="../img/logo.png" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -65,8 +65,13 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand logo" href="#">
-            <img src="img/logo.png" alt="Bootstrap" width="70" height="auto" />
+          <a class="navbar-brand logo" href="../index.html">
+            <img
+              src="../img/logo.png"
+              alt="Bootstrap"
+              width="70"
+              height="auto"
+            />
           </a>
 
           <button
@@ -83,17 +88,17 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Accueil</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="catalogue.html"
                   >Accessoires</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Décorations</a>
+                <a class="nav-link" href="catalogue.html">Décorations</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -106,10 +111,10 @@
                   Vêtements
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Chaussures</a></li>
-                  <li><a class="dropdown-item" href="#">Robes</a></li>
-                  <li><a class="dropdown-item" href="#">Pantalons</a></li>
-                  <li><a class="dropdown-item" href="#">T-shirt</a></li>
+                  <li><a class="dropdown-item" href="catalogue.html">Chaussures</a></li>
+                  <li><a class="dropdown-item" href="catalogue.html">Robes</a></li>
+                  <li><a class="dropdown-item" href="catalogue.html">Pantalons</a></li>
+                  <li><a class="dropdown-item" href="catalogue.html">T-shirt</a></li>
                 </ul>
               </li>
             </ul>
@@ -120,14 +125,14 @@
                 placeholder="Recherchez un article"
                 aria-label="Search"
               />
-              <button class="btn btn-link" type="submit">
-                <i class="fa-solid fa-star icnsmenu"></i>
+              <a href="#"><button class="btn btn-link" type="submit">
+                <i class="fa-solid fa-star icnsmenu"></i></a>
               </button>
-              <button class="btn btn-link" type="submit">
-                <i class="fa-solid fa-user icnsmenu"></i>
+              <a href="#"><button class="btn btn-link" type="submit">
+                <i class="fa-solid fa-user icnsmenu"></i></a>
               </button>
-              <button class="btn btn-link" type="submit">
-                <i class="fa-solid fa-cart-shopping icnsmenu"></i>
+              <a href="#"><button class="btn btn-link" type="submit">
+                <i class="fa-solid fa-cart-shopping icnsmenu"></i></a>
               </button>
             </form>
           </div>
@@ -138,6 +143,64 @@
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
     <!------------------------------------------------------------------ NAVBAR -------------------------------------------------------->
     <!------------------------------------------------------------------ Hero section -------------------------------------------------------->
+    <!------------------------------------------CONTAINERRR--------------------------------------->
+    <div class="parallaxv" style="min-height: 200px"></div>
+     <div class="container py-5">
+        <div class="row">
+          <div class="col-12 col-sm-6 col-md-6">
+            <img
+              src="../img/index/nikeairmax.png"
+              class="card-img-top"
+              alt="Produit d'occasion"
+              style="max-height: 400px; object-fit: cover"
+            />
+          </div>
+              <!-- Détails du produit -->
+          <div class="col-12 col-sm-6 col-md-6" style="color: #ffffff;">
+            <h1 style="color: #ffffff;" class="titre">Nike Air Max 2024 - Occasion</h1>
+            <h2 style="color: #f70776">45.00 €</h2>
+            <p>État : <span class="fw-bold">Très bon état</span></p>
+            <p>Vendeur/Vendeuse:  <a href="#" class="vendeur"> @helidya27</a></p>
+            <p>Basket Nike Air Max d'occasion en excellent état. Portée seulement
+              deux fois, vendue avec boîte d'origine. Parfait pour les amateurs de
+              mode à petit prix.</p>
+              <ul class="list-unstyled">
+                <li >
+                  <i
+                class="bi bi-check-circle-fill me-2"
+                style="color: #f70776"
+              ></i>
+              Taille : 42
+                </li>
+                <li>
+                  <i
+                    class="bi bi-check-circle-fill me-2"
+                    style="color: #f70776"
+                  ></i>
+                  Couleur : Noir et Rouge
+                </li>
+                <li>
+                  <i
+                    class="bi bi-check-circle-fill me-2"
+                    style="color: #f70776"
+                  ></i>
+                  Livraison possible
+                </li>
+              </ul>
+              <div>
+                <button class="btn btn-primary btnachat me-2  btn-lg">
+                <i class="bi bi-cart"></i> Acheter
+              </button>
+              <button class="btn btn-outline-light  btn-lg">
+                <i class="bi bi-heart"></i> Ajouter à la wishlist
+              </button>
+            </div>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="parallaxv" style="min-height: 50px"></div>
     <!--------------------------------------------------------------------------------------------- FOOTERRRRR ------------------------------------------------>
     <div class="parallaxv" style="min-height: 100px"></div>
 
@@ -173,7 +236,7 @@
             >
               <li style="text-align: center">
                 <a
-                  href="https://www.facebook.com/groups/448485336360350"
+                  href="https://www.facebook.com/"
                   target="_blank"
                   style="text-align: center"
                 >
