--- a/html/chaus.html
+++ b/html/chaus.html
@@ -128,7 +128,7 @@
               <a href="#"><button class="btn btn-link" type="submit">
                 <i class="fa-solid fa-star icnsmenu"></i></a>
               </button>
-              <a href="#"><button class="btn btn-link" type="submit">
+              <a href="profil.html"><button class="btn btn-link" type="submit">
                 <i class="fa-solid fa-user icnsmenu"></i></a>
               </button>
               <a href="#"><button class="btn btn-link" type="submit">
