--- a/index.html
+++ b/index.html
@@ -120,15 +120,16 @@
                 placeholder="Recherchez un article"
                 aria-label="Search"
               />
-              <button class="btn btn-link" type="submit">
-                <i class="fa-solid fa-star icnsmenu"></i>
-              </button>
-              <button class="btn btn-link" type="submit">
-                <i class="fa-solid fa-user icnsmenu"></i>
-              </button>
-              <button class="btn btn-link" type="submit">
-                <i class="fa-solid fa-cart-shopping icnsmenu"></i>
-              </button>
+              <a href="html/profil.html">
+                <i class="fa-solid fa-star icnsmenu"></i
+              ></a>
+
+              <a href="html/profil.html">
+                <i class="fa-solid fa-user icnsmenu"></i
+              ></a>
+              <a href="html/profil.html"
+                ><i class="fa-solid fa-cart-shopping icnsmenu"></i
+              ></a>
             </form>
           </div>
         </div>
