--- a/html/chaus.html
+++ b/html/chaus.html
@@ -160,7 +160,8 @@
             <h1 style="color: #ffffff;" class="titre">Nike Air Max 2024 - Occasion</h1>
             <h2 style="color: #f70776">45.00 €</h2>
             <p>État : <span class="fw-bold">Très bon état</span></p>
-            <p>Vendeur/Vendeuse:  <a href="#" class="vendeur"> @helidya27</a></p>
+            <p>Catégorie : <span class="fw-bold">Chaussures</span></p>
+            <p>Vendeur/Vendeuse:  <a href="#" class="vendeur"> @titan76</a></p>
             <p>Basket Nike Air Max d'occasion en excellent état. Portée seulement
               deux fois, vendue avec boîte d'origine. Parfait pour les amateurs de
               mode à petit prix.</p>
@@ -192,13 +193,30 @@
                 <i class="bi bi-cart"></i> Acheter
               </button>
               <button class="btn btn-outline-light  btn-lg">
-                <i class="bi bi-heart"></i> Ajouter à la wishlist
+                <i class="fa-solid fa-star"></i> Ajouter à la wishlist
               </button>
             </div>
               
           </div>
         </div>
+        <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 textv" style="color: #ffffff;">
+          <h2 style="color: #f70776">Info Vendeur</h2>
+          <img 
+          src="../img/index/pfp.jpg" 
+          alt="Photo de profil utilisateur" 
+          class="rounded-circle mb-3" 
+          style="width: 150px; height: 150px; object-fit: cover;"
+        /> 
+            <p>Nom<span class="fw-bold">Eren Jeager</span></p>
+            <p>Catégorie : <span class="fw-bold">Chaussures</span></p>
+            <p>Vendeur/Vendeuse:  <a href="#" class="vendeur"> @titan76</a></p>
+            <p>Basket Nike Air Max d'occasion en excellent état. Portée seulement
+              deux fois, vendue avec boîte d'origine. Parfait pour les amateurs de
+              mode à petit prix.</p>
+        </div>
       </div>
+     </div>
     </section>
     <div class="parallaxv" style="min-height: 50px"></div>
     <!--------------------------------------------------------------------------------------------- FOOTERRRRR ------------------------------------------------>
@@ -215,12 +233,12 @@
             <h5 style="color: #ffffff; font-size: 1.9rem">Contact</h5>
             <ul class="list-unstyled">
               <li>
-                <a href="mailto:cineflix@gmail.com" class="contactt"
+                <a href="mailto:restyle@entreprise.com" class="contactt"
                   >restyle@entreprise.com</a
                 >
               </li>
               <li>
-                <a href="tel:+33623568955" class="contactt"
+                <a href="tel:+33223568955" class="contactt"
                   >+33 2 23 56 89 55</a
                 >
               </li>
