--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Décorations</a>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item">
+                <a class="nav-link" href="#"> Vêtements</a>
+              </li>
+              <!-- <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
@@ -111,11 +114,11 @@
                   <li><a class="dropdown-item" href="#">Pantalons</a></li>
                   <li><a class="dropdown-item" href="#">T-shirt</a></li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
             <form class="d-flex" role="search">
               <input
-                class="form-control me-2"
+                class="form-control"
                 type="search"
                 placeholder="Recherchez un article"
                 aria-label="Search"
@@ -123,13 +126,15 @@
               <a href="html/profil.html">
                 <i class="fa-solid fa-star icnsmenu"></i
               ></a>
-
               <a href="html/profil.html">
                 <i class="fa-solid fa-user icnsmenu"></i
               ></a>
               <a href="html/profil.html"
                 ><i class="fa-solid fa-cart-shopping icnsmenu"></i
               ></a>
+              <button type="button" class="btn gap-2 connexionbtn">
+                Se connecter/ S'inscrire
+              </button>
             </form>
           </div>
         </div>
