--- a/html/chaus.html
+++ b/html/chaus.html
@@ -208,12 +208,26 @@
           class="rounded-circle mb-3" 
           style="width: 150px; height: 150px; object-fit: cover;"
         /> 
-            <p>Nom<span class="fw-bold">Eren Jeager</span></p>
-            <p>Catégorie : <span class="fw-bold">Chaussures</span></p>
-            <p>Vendeur/Vendeuse:  <a href="#" class="vendeur"> @titan76</a></p>
-            <p>Basket Nike Air Max d'occasion en excellent état. Portée seulement
-              deux fois, vendue avec boîte d'origine. Parfait pour les amateurs de
-              mode à petit prix.</p>
+            <p>Nom : <span class="fw-bold">Eren Jeager</span></p>
+            <section class="seller-rating">
+              <div class="container text-center">
+                <!-- Note moyenne -->
+                <div class="average-rating mb-3">
+                  <p class="mb-2">Note moyenne : <strong>4.5</strong> / 5</p>
+                  <div class="stars">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                  </div>
+                </div>
+            </section>
+            
+            <button class="btn btn-primary btnachat me-2">
+              Contacter le vendeur
+            </button>
+            
         </div>
       </div>
      </div>
