--- a/index.html
+++ b/index.html
@@ -95,10 +95,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Décorations</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"> Vêtements</a>
-              </li>
-              <!-- <li class="nav-item dropdown">
+              <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
@@ -114,7 +111,12 @@
                   <li><a class="dropdown-item" href="#">Pantalons</a></li>
                   <li><a class="dropdown-item" href="#">T-shirt</a></li>
                 </ul>
-              </li> -->
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html"
+                  >Contact</a
+                >
+              </li>
             </ul>
             <form class="d-flex" role="search">
               <input
