--- a/index.html
+++ b/index.html
@@ -88,17 +88,22 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="html/catalogue.html#accessoires"
                   >Accessoires</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Décorations</a>
+                <a class="nav-link" href="html/catalogue.html#deco"
+                  >Décorations</a
+                >
               </li>
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
-                  href="#"
+                  href="html/catalogue.html"
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
@@ -106,14 +111,32 @@
                   Vêtements
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Chaussures</a></li>
-                  <li><a class="dropdown-item" href="#">Robes</a></li>
-                  <li><a class="dropdown-item" href="#">Pantalons</a></li>
-                  <li><a class="dropdown-item" href="#">T-shirt</a></li>
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="html/catalogue.html#chaussure"
+                      >Chaussures</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="html/catalogue.html#vetement"
+                      >Robes</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="html/catalogue.html#vetement"
+                      >Pantalons</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="html/catalogue.html#vetement"
+                      >T-shirt</a
+                    >
+                  </li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="html/contact.html"
                   >Contact</a
                 >
               </li>
@@ -125,18 +148,20 @@
                 placeholder="Recherchez un article"
                 aria-label="Search"
               />
-              <a href="html/profil.html">
+              <a href="html/favoris.html">
                 <i class="fa-solid fa-star icnsmenu"></i
               ></a>
               <a href="html/profil.html">
                 <i class="fa-solid fa-user icnsmenu"></i
               ></a>
-              <a href="html/profil.html"
+              <a href="index.html"
                 ><i class="fa-solid fa-cart-shopping icnsmenu"></i
               ></a>
-              <button type="button" class="btn gap-2 connexionbtn">
-                Se connecter/ S'inscrire
-              </button>
+              <a href="html/inscription.html" style="text-decoration: none"
+                ><button type="button" class="btn gap-2 connexionbtn">
+                  Se connecter/ S'inscrire
+                </button></a
+              >
             </form>
           </div>
         </div>
