--- a/html/chaus.html
+++ b/html/chaus.html
@@ -65,13 +65,8 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand logo" href="../index.html">
-            <img
-              src="../img/logo.png"
-              alt="Bootstrap"
-              width="70"
-              height="auto"
-            />
+          <a class="navbar-brand logo" href="#">
+            <img src="../img/logo.png" alt="Bootstrap" width="70" height="auto" />
           </a>
 
           <button
@@ -93,17 +88,17 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="catalogue.html"
+                <a class="nav-link" aria-current="page" href="catalogue.html#accessoires"
                   >Accessoires</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="catalogue.html">Décorations</a>
+                <a class="nav-link" href="catalogue.html#deco">Décorations</a>
               </li>
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
-                  href="#"
+                  href="catalogue.html"
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
@@ -111,29 +106,37 @@
                   Vêtements
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="catalogue.html">Chaussures</a></li>
-                  <li><a class="dropdown-item" href="catalogue.html">Robes</a></li>
-                  <li><a class="dropdown-item" href="catalogue.html">Pantalons</a></li>
-                  <li><a class="dropdown-item" href="catalogue.html">T-shirt</a></li>
+                  <li><a class="dropdown-item" href="catalogue.html#chaussure">Chaussures</a></li>
+                  <li><a class="dropdown-item" href="catalogue.html#vetement">Robes</a></li>
+                  <li><a class="dropdown-item" href="catalogue.html#vetement">Pantalons</a></li>
+                  <li><a class="dropdown-item" href="catalogue.html#vetement">T-shirt</a></li>
                 </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="contact.html"
+                  >Contact</a
+                >
               </li>
             </ul>
             <form class="d-flex" role="search">
               <input
-                class="form-control me-2"
+                class="form-control"
                 type="search"
                 placeholder="Recherchez un article"
                 aria-label="Search"
               />
-              <a href="#"><button class="btn btn-link" type="submit">
-                <i class="fa-solid fa-star icnsmenu"></i></a>
-              </button>
-              <a href="profil.html"><button class="btn btn-link" type="submit">
-                <i class="fa-solid fa-user icnsmenu"></i></a>
-              </button>
-              <a href="#"><button class="btn btn-link" type="submit">
-                <i class="fa-solid fa-cart-shopping icnsmenu"></i></a>
-              </button>
+              <a href="favoris.html">
+                <i class="fa-solid fa-star icnsmenu"></i
+              ></a>
+              <a href="profil.html">
+                <i class="fa-solid fa-user icnsmenu"></i
+              ></a>
+              <a href="../index.html"
+                ><i class="fa-solid fa-cart-shopping icnsmenu"></i
+              ></a>
+              <a href="inscription.html" style="text-decoration: none;"><button type="button" class="btn gap-2 connexionbtn">
+                Se connecter/ S'inscrire
+              </button></a>
             </form>
           </div>
         </div>
