--- a/html/contact.html
+++ b/html/contact.html
@@ -69,7 +69,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
           <div class="container-fluid">
-            <a class="navbar-brand logo" href="#">
+            <a class="navbar-brand logo" href="../index.html">
               <img src="../img/logo.png" alt="Bootstrap" width="70" height="auto" />
             </a>
   
@@ -195,7 +195,7 @@
       </div>
     </div>
     <!---------------------------------------------------------- FAQQQQQ -------------------------------------------------------->
-      <div class="parallaxv" style="min-height: 80px;"></div>
+      <div class="parallaxv" style="min-height: 80px;" id="faq"></div>
       <div class="faq" style="padding-top: 30px; padding-bottom: 100px;">
         <h2 style="text-align: center;color: #ffffff;"> FAQ</h2> <br>z
         <div class="accordion" id="accordionExample">
@@ -295,7 +295,6 @@
 
     </div>
 
-    <!--------------------------------------------------------------------------------------------- FOOTER ------------------------------------------------>
     <div class="parallaxv" style="min-height: 180px"></div>
 
  <!-------------------------------------------------------- FOOTERRR ------------------------------------------------------------------------->
@@ -308,35 +307,35 @@
           <ul class="list-unstyled">
             <li>
               <a
-                href="index.html"
+                href="../index.html"
                 class="footer-link animate__animated animate__fadeIn"
                 >Accueil</a
               >
             </li>
             <li>
               <a
-                href="page/listefilms.html"
+                href="catalogue.html#accessoires"
                 class="footer-link animate__animated animate__fadeIn"
                 >Accessoires</a
               >
             </li>
             <li>
               <a
-                href="page/genres.html"
+                href="catalogue.html#deco"
                 class="footer-link animate__animated animate__fadeIn"
                 >Décorations</a
               >
             </li>
             <li>
               <a
-                href="page/pagenouveaute.html"
+                href="catalogue.html#vetement"
                 class="footer-link animate__animated animate__fadeIn"
                 >Vêtements</a
               >
             </li>
             <li>
                 <a
-                  href="page/pagenouveaute.html"
+                  href="contact.html"
                   class="footer-link animate__animated animate__fadeIn"
                   >Contact</a
                 >
@@ -391,22 +390,22 @@
           <ul class="list-unstyled">
             <li>
                 <a
-                  href="page/politiquedeco.html"
+                  href="contact.html#faq"
                   class="footer-link animate__animated animate__fadeIn"
                   >FAQ</a
                 >
               </li>
             <li>
               <a
-                href="page/mentionslegales.html"
-                class="footer-link animate__animated animate__fadeIn"
+                href="mentionslegales.html"
+                class="footer-link animate__animated animate__fadeIn" target="_blank"
                 >Mentions légales</a
               >
             </li>
             <li>
               <a
-                href="page/politiquedeco.html"
-                class="footer-link animate__animated animate__fadeIn"
+                href="politiquedeco.html"
+                class="footer-link animate__animated animate__fadeIn" target="_blank"
                 >Politique de confidentialité</a
               >
             </li>
