--- a/html/profil.html
+++ b/html/profil.html
@@ -65,7 +65,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand logo" href="#">
+          <a class="navbar-brand logo" href="../index.html">
             <img
               src="../img/logo.png"
               alt="Bootstrap"
@@ -281,106 +281,149 @@
     <!--------------------------------------------------------------------------------------------- FOOTERRRRR ------------------------------------------------>
     <div class="parallaxv" style="min-height: 100px"></div>
 
-    <footer
-      class="py-4"
-      style="background-color: #1c1c1c; color: #ffffff; text-align: center"
-    >
+    <!-------------------------------------------------------- FOOTERRR ------------------------------------------------------------------------->
+    <footer class="text-white py-4">
       <div class="container">
         <div class="row">
-          <!-- Section Contact -->
-          <div class="col-md-4 mb-3">
-            <h5 style="color: #ffffff; font-size: 1.9rem">Contact</h5>
+          <!-- Colonne 1 : Pages principales -->
+          <div class="col-sm-6 col-md-3 mb-3">
+            <h5 class="footerh5">Pages principales</h5>
             <ul class="list-unstyled">
               <li>
-                <a href="mailto:cineflix@gmail.com" class="contactt"
-                  >restyle@entreprise.com</a
+                <a
+                  href="../index.html"
+                  class="footer-link animate__animated animate__fadeIn"
+                  >Accueil</a
                 >
               </li>
               <li>
-                <a href="tel:+33623568955" class="contactt"
-                  >+33 2 23 56 89 55</a
+                <a
+                  href="catalogue.html#accessoires"
+                  class="footer-link animate__animated animate__fadeIn"
+                  >Accessoires</a
+                >
+              </li>
+              <li>
+                <a
+                  href="catalogue.html#deco"
+                  class="footer-link animate__animated animate__fadeIn"
+                  >Décorations</a
+                >
+              </li>
+              <li>
+                <a
+                  href="catalogue.html#vetement"
+                  class="footer-link animate__animated animate__fadeIn"
+                  >Vêtements</a
+                >
+              </li>
+              <li>
+                <a
+                  href="contact.html"
+                  class="footer-link animate__animated animate__fadeIn"
+                  >Contact</a
                 >
               </li>
             </ul>
           </div>
 
-          <!-- Section rsx -->
-          <div class="col-md-4 mb-3" style="color: #ffffff; text-align: center">
-            <h5 style="color: #ffffff; font-size: 1.9rem">Réseaux-sociaux</h5>
-            <ul
-              class="list-unstyled d-flex gap-3"
-              style="text-align: center; justify-content: center"
-            >
-              <li style="text-align: center">
-                <a
-                  href="https://www.facebook.com/"
-                  target="_blank"
-                  style="text-align: center"
+          <!-- Colonne 2 : Informations de contact -->
+          <div class="col-sm-6 col-md-3 mb-3">
+            <h5 class="footerh5">Contact</h5>
+            <ul class="list-unstyled mailtel">
+              <li>
+                <a href="mailto:restyle@entreprise.com"
+                  ><i class="fas fa-envelope"></i> restyle@entreprise.com</a
                 >
-                  <i class="bi bi-facebook rsxx"></i>
-                </a>
               </li>
               <li>
-                <a
-                  href="https://www.instagram.com/"
-                  target="_blank"
-                  style="text-align: center"
+                <a href="tel:+33223568955"
+                  ><i class="fas fa-phone"></i> +33 2 23 56 89 55</a
                 >
-                  <i class="bi bi-instagram rsxx"></i>
-                </a>
               </li>
               <li>
-                <a
-                  href="https://x.com/"
-                  target="_blank"
-                  style="text-align: center"
-                >
-                  <i class="bi bi-twitter-x rsxx"></i>
-                </a>
+                <i class="fas fa-map-marker-alt"></i> 25 rue des Arts 76000
+                Rouen
               </li>
             </ul>
           </div>
 
-          <!-- Section mentions -->
-          <div class="col-md-4">
-            <h5 style="color: #ffffff; font-size: 1.9rem">Informations</h5>
+          <!-- Colonne 3 : Réseaux sociaux -->
+          <div class="col-sm-6 col-md-3 mb-3">
+            <h5 class="footerh5">Suivez-nous</h5>
+            <div class="social-icons">
+              <a href="#" class="footer-icon animate__animated animate__flash">
+              </a>
+              <a
+                href="https://www.facebook.com/"
+                class="footer-icon animate__animated animate__flash"
+                target="_blank"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a
+                href="https://x.com/?lang=fr"
+                target="_blank"
+                class="footer-icon animate__animated animate__flash"
+                ><i class="bi bi-twitter-x"></i
+              ></a>
+
+              <a
+                href="https://www.prod.instagram.com/"
+                target="_blank"
+                class="footer-icon animate__animated animate__flash"
+                ><i class="fab fa-instagram"></i
+              ></a>
+            </div>
+          </div>
+
+          <!-- Colonne 4 : Mentions légales -->
+          <div class="col-sm-6 col-md-3 mb-3">
+            <h5 class="footerh5">Informations</h5>
             <ul class="list-unstyled">
               <li>
-                <a href="mentionslegales.html" class="infoo" target="_blank"
+                <a
+                  href="contact.html#faq"
+                  class="footer-link animate__animated animate__fadeIn"
+                  >FAQ</a
+                >
+              </li>
+              <li>
+                <a
+                  href="mentionslegales.html"
+                  class="footer-link animate__animated animate__fadeIn"
+                  target="_blank"
                   >Mentions légales</a
                 >
               </li>
               <li>
-                <a href="politiquedeco.html" class="infoo" target="_blank"
+                <a
+                  href="politiquedeco.html"
+                  class="footer-link animate__animated animate__fadeIn"
+                  target="_blank"
                   >Politique de confidentialité</a
                 >
               </li>
             </ul>
           </div>
         </div>
-
-        <!-- Ligne de séparation -->
-        <hr class="bg-secondary my-3" style="color: #f70776" />
-
-        <!-- Copyright -->
-        <div class="text-center">
-          <p style="font-size: 15px">© 2024 ReStyle. Tous droits réservés.</p>
+        <!-- Bas du footer -->
+        <div class="text-center mt-4">
+          <p>&copy; 2024 ReStyle. Tous droits réservés.</p>
         </div>
       </div>
     </footer>
+    <!-------------------------------------------------------------------------------- JAVASCRIPT ----------------------------------------------------------------------->
 
-    <!---------------------------------------------------------------- footer --------------------------------------------------------------------------------------->
-    <!------------------------------------------------------------------ JAVA -------------------------------------------------------->
-    <!------------------------------------------------------------------ JAVA -------------------------------------------------------->
-    <!------------------------------------------------------------------ JAVA -------------------------------------------------------->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
